# anet

./: CMakeLists.txt  README.md
example/: mnist_util.h  train_mnist.cpp
include/: anet.h  network.h  types.h
include/layer/: activation_layer.h  convolution_layer.h  dropout_layer.h  full_connection_layer.h  layer.h  pooling_layer.h  reshape_layer.h
include/layer/core/: full_conn_core.h
include/math/: functions.h  matrix.cpp  matrix.h  vec.h
include/optimizer/: adam_optimizer.h  gd_optimizer.h  optimizer.h
include/util/: gemm.h  iobyte.h  parallelize_looper.h
src/: anet.cpp  iobyte.cpp  network.cpp  types.h
src/layer/: activation_layer.cpp  convolution_layer.cpp  dropout_layer.cpp  full_connection_layer.cpp  pooling_layer.cpp  reshape_layer.cpp
src/math/: functions.cpp
src/util/: iobyte.cpp
